setup github pages configuration

--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "hooked",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://cyu8017.github.io/premiere-radar",
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
