fix github pages deployment issue

--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
+    "build:pages": "npm run build && rm -rf docs && mkdir -p docs && cp -R build/* docs/",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
