--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "hooked",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://cyu8017.github.io/premiere-radar",
+  "homepage": "https://cyu8017.github.io/premier-radar-app",
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
